oxiplate-derive/tests/broken/statements/closed-like-comment.stderr
error: "%}" expected
 --> tests/broken/statements/closed-like-comment.rs:4:32
  |
4 | #[oxiplate_inline("{% continue #}")]
  |                                ^^
